[package]
name = "rover-gui"
version = "0.1.0"
authors = ["Theodore DeRego <tderego94@gmail.com>"]

[[bin]]

name="rover_gui"
path="src/main.rs"

#[dependencies.piston]
#git = "https://github.com/pistondevelopers/piston"

[dependencies.pistoncore-sdl2_window]
git = "https://github.com/pistondevelopers/sdl2_window"

#[dependencies.piston2d-opengl_graphics]
#git = "https://github.com/pistondevelopers/opengl_graphics"

#[dependencies.piston2d-graphics]
#git = "https://github.com/pistondevelopers/graphics"

[dependencies.conrod]
git = "https://github.com/pistondevelopers/conrod"

#[dependencies.vecmath]
#git = "https://github.com/pistondevelopers/vecmath"

[dependencies.ffmpeg]
git = "https://github.com/tedsta/rust-ffmpeg"
features = ["codec", "device", "filter", "format", "postprocessing", "software-resampling", "software-scaling"]
default-features = false

[dependencies]

time = "0.1.*"
sdl2 = "0.4"
piston = "0.1.4"
piston2d-graphics = "0.1.4"
piston2d-opengl_graphics = "0.1.0"
image = "*"