[package]
name = "rover-gui"
version = "0.1.0"
authors = ["Theodore DeRego <tderego94@gmail.com>"]

[[bin]]

name="navigation"
path="../src/navigation.rs"

[dependencies.ffmpeg]
git = "https://github.com/meh/rust-ffmpeg"
features = ["codec", "device", "filter", "format", "postprocessing", "software-resampling", "software-scaling"]
default-features = false

[dependencies]

time = "0.1.*"
image = "0.9.0"

piston_window = "0.43.0"
piston2d-graphics = "0.16.0"
conrod = "0.34.0"
