[package]
name = "rover-gui"
version = "0.1.0"
authors = ["Theodore DeRego <tderego94@gmail.com>"]

[[bin]]

name="telemetry"
path="../src/telemetry.rs"

[dependencies]

time = "0.1.*"
pistoncore-glutin_window = "0.17.1"
piston = "0.15.1"
piston2d-graphics = "0.11.0"
piston2d-opengl_graphics = "0.19.0"
conrod = "0.22.0"
