[package]
name = "rover-gui"
version = "0.1.0"
authors = ["Theodore DeRego <tderego94@gmail.com>"]

[[bin]]

name="telemetry"
path="../src/telemetry.rs"

[dependencies]

conrod = "0.40.0"
gfx_device_gl = "0.11.2"
piston2d-gfx_graphics = "0.31.2"
piston2d-graphics = "0.17.0"
piston_window = "0.51.0"
time = "0.1.*"
